--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ reqwest = {version = "0.12.26", features = ["json"] }
 thiserror = "2.0.17"
 chrono = { version = "0.4.42", features = ["serde"] }
 bon = "3.8.1"
+
+[dev-dependencies]
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
